<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="first_crime">First</string>
    <string name="last_crime">Last</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="time_picker_title">Time of crime:</string>
    <string name="crime_status_open">STATUS: OPEN</string>
    <string name="crime_status_closed">STATUS: CASE CLOSED</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="no_crimes">There are no crimes.</string>
    <string name="add_crime">Add Crime</string>
    <string name="limit_reached_5">Limit Reached (5)</string>
    <string name="crime_limit_toast">You can only have a maximum of 5 crimes.</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="crime_call_text">Call Suspect</string>

    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>
</resources>
